exports[`test Change status of choices change 1`] = `
<MultipleChoice
  choices={
    Array [
      Object {
        "id": "option-1",
        "isChecked": false,
        "label": "option 1",
        "value": "option-1",
      },
      Object {
        "id": "option-2",
        "isChecked": false,
        "label": "option 2",
        "value": "option-2",
      },
      Object {
        "id": "option-3",
        "isChecked": false,
        "label": "option 3",
        "value": "option-2",
      },
      Object {
        "id": "option-4",
        "isChecked": false,
        "label": "option 4",
        "value": "option-4",
      },
    ]
  }
  error={null}
  errorSubInfo={null}
  heading="MultipleChoice"
  headingStyle="control-label"
  inputStyle="inline"
  isRequired={false}
  name="choice[]"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  query={Object {}}
  reference={[Function]}
  requiredLabel="">
  <div
    className="formGroup formGroupMultipleChoice inline">
    <label
      className="controlLabel"
      htmlFor="choice[]">
      MultipleChoice
    </label>
    <div
      className="inputContainer">
      <div
        className="choice">
        <input
          checked={true}
          className="formControl"
          id="choice[]option-1"
          name="choice[]"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="checkbox"
          value="option-1" />
        <label
          htmlFor="choice[]option-1">
          option 1
        </label>
      </div>
      <div
        className="choice">
        <input
          checked={false}
          className="formControl"
          id="choice[]option-2"
          name="choice[]"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="checkbox"
          value="option-2" />
        <label
          htmlFor="choice[]option-2">
          option 2
        </label>
      </div>
      <div
        className="choice">
        <input
          checked={false}
          className="formControl"
          id="choice[]option-3"
          name="choice[]"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="checkbox"
          value="option-2" />
        <label
          htmlFor="choice[]option-3">
          option 3
        </label>
      </div>
      <div
        className="choice">
        <input
          checked={true}
          className="formControl"
          id="choice[]option-4"
          name="choice[]"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="checkbox"
          value="option-4" />
        <label
          htmlFor="choice[]option-4">
          option 4
        </label>
      </div>
    </div>
  </div>
</MultipleChoice>
`;

exports[`test Changes status on choice change 1`] = `
<MultipleChoice
  choices={
    Array [
      Object {
        "id": "option-1",
        "isChecked": false,
        "label": "test",
        "value": "test",
      },
    ]
  }
  error={null}
  errorSubInfo={null}
  heading="Test"
  headingStyle="control-label"
  inputStyle="inline"
  isRequired={true}
  name="choice[]"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  query={Object {}}
  reference={[Function]}
  requiredLabel="">
  <div
    className="formGroup formGroupMultipleChoice inline">
    <label
      className="controlLabel"
      htmlFor="choice[]">
      Test
    </label>
    <div
      className="inputContainer">
      <div
        className="choice">
        <input
          checked={true}
          className="formControl"
          id="choice[]option-1"
          name="choice[]"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          type="checkbox"
          value="test" />
        <label
          htmlFor="choice[]option-1">
          test
        </label>
      </div>
    </div>
  </div>
</MultipleChoice>
`;

exports[`test Renders an error if errors prop is set 1`] = `
<MultipleChoice
  choices={
    Array [
      Object {
        "id": "option-1",
        "isChecked": false,
        "label": "test",
        "value": "test",
      },
    ]
  }
  error="error"
  errorSubInfo="Subinfo"
  heading="Button Choice"
  headingStyle="control-label"
  inputStyle="buttons"
  isRequired={true}
  name="choice[]"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  query={Object {}}
  reference={[Function]}
  requiredLabel="">
  <div
    className="formGroup formGroupMultipleChoice buttons">
    <label
      className="controlLabel"
      htmlFor="choice[]">
      Button Choice
    </label>
    <div
      className="inputContainer">
      <div
        className="choice">
        <input
          checked={false}
          className="formControl"
          id="choice[]option-1"
          name="choice[]"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          type="checkbox"
          value="test" />
        <label
          htmlFor="choice[]option-1">
          test
        </label>
      </div>
    </div>
    <Error
      info="error"
      subInfo="Subinfo">
      <span
        className="error">
        <strong
          className="info">
          error
        </strong>
        Subinfo
      </span>
    </Error>
  </div>
</MultipleChoice>
`;

exports[`test Renders choice without crashing 1`] = `
<div
  className="formGroup formGroupMultipleChoice inline">
  
  <label
    className="controlLabel"
    htmlFor="choice[]">
    Test
  </label>
  <div
    className="inputContainer">
    <div
      className="choice">
      <input
        checked={false}
        className="formControl"
        id="choice[]option-1"
        name="choice[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        type="checkbox"
        value="test" />
      <label
        htmlFor="choice[]option-1">
        test
      </label>
    </div>
  </div>
</div>
`;

exports[`test Renders choices with inputStyle buttons withouth crashing 1`] = `
<div
  className="formGroup formGroupMultipleChoice buttons">
  
  <label
    className="controlLabel"
    htmlFor="choice[]">
    Button Choice
  </label>
  <div
    className="inputContainer">
    <div
      className="choice">
      <input
        checked={false}
        className="formControl"
        id="choice[]option-1"
        name="choice[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        type="checkbox"
        value="test" />
      <label
        htmlFor="choice[]option-1">
        test
      </label>
    </div>
  </div>
</div>
`;

exports[`test Renders choices without crashing 1`] = `
<div
  className="formGroup formGroupMultipleChoice inline">
  
  <label
    className="controlLabel"
    htmlFor="choice[]">
    MultipleChoice
  </label>
  <div
    className="inputContainer">
    <div
      className="choice">
      <input
        checked={false}
        className="formControl"
        id="choice[]option-1"
        name="choice[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="checkbox"
        value="option-1" />
      <label
        htmlFor="choice[]option-1">
        option 1
      </label>
    </div>
    <div
      className="choice">
      <input
        checked={false}
        className="formControl"
        id="choice[]option-2"
        name="choice[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="checkbox"
        value="option-2" />
      <label
        htmlFor="choice[]option-2">
        option 2
      </label>
    </div>
    <div
      className="choice">
      <input
        checked={false}
        className="formControl"
        id="choice[]option-3"
        name="choice[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="checkbox"
        value="option-2" />
      <label
        htmlFor="choice[]option-3">
        option 3
      </label>
    </div>
    <div
      className="choice">
      <input
        checked={false}
        className="formControl"
        id="choice[]option-4"
        name="choice[]"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="checkbox"
        value="option-4" />
      <label
        htmlFor="choice[]option-4">
        option 4
      </label>
    </div>
  </div>
</div>
`;
